style: fix planner not scrolling on mobile and define height

--- a/src/features/Planner/_planner.module.scss
+++ b/src/features/Planner/_planner.module.scss
@@ -12,6 +12,8 @@
   flex-direction: column;
 
   @include mixins.media-only-mobile {
+    overflow: scroll;
+    height: 500px;
     margin: 0 variables.$inner-spacing;
   }
   @include mixins.media-only-small-mobile {
